--- a/Zetta.ConfigMgr.QuickTools.csproj
+++ b/Zetta.ConfigMgr.QuickTools.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{0C25F629-6E6D-4475-AB92-4CE64C117CD9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Zetta.ConfigMgr.IntegrationKit</RootNamespace>
-    <AssemblyName>Zetta.ConfigMgr.IntegrationKit</AssemblyName>
+    <RootNamespace>Zetta.ConfigMgr.QuickTools</RootNamespace>
+    <AssemblyName>Zetta.ConfigMgr.QuickTools</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -100,6 +100,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ResultSoftwareUpdatesControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ResultSoftwareUpdatesControl.Designer.cs">
+      <DependentUpon>ResultSoftwareUpdatesControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ResultSUComplianceControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ResultSUComplianceControl.Designer.cs">
+      <DependentUpon>ResultSUComplianceControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="SUDeployment.cs" />
     <Compile Include="SUDeploymentGeneralPage.cs">
       <SubType>UserControl</SubType>
@@ -150,6 +162,12 @@
     <EmbeddedResource Include="ResultCollectionsControl.resx">
       <DependentUpon>ResultCollectionsControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ResultSoftwareUpdatesControl.resx">
+      <DependentUpon>ResultSoftwareUpdatesControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ResultSUComplianceControl.resx">
+      <DependentUpon>ResultSUComplianceControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SUDeploymentGeneralPage.resx">
       <DependentUpon>SUDeploymentGeneralPage.cs</DependentUpon>
     </EmbeddedResource>
@@ -159,6 +177,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\update.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
