--- a/Zetta.ConfigMgr.QuickTools.csproj
+++ b/Zetta.ConfigMgr.QuickTools.csproj
@@ -75,6 +75,13 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientActions.cs" />
+    <Compile Include="ClientActionsDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ClientActionsDialog.Designer.cs">
+      <DependentUpon>ClientActionsDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Driver.cs" />
     <Compile Include="DriverPackage.cs" />
     <Compile Include="DriverPackageImportPage.cs">
@@ -143,6 +150,9 @@
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ClientActionsDialog.resx">
+      <DependentUpon>ClientActionsDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DriverPackageGeneralPage.resx">
       <DependentUpon>DriverPackageGeneralPage.cs</DependentUpon>
     </EmbeddedResource>
