--- a/Zetta.ConfigMgr.QuickTools.csproj
+++ b/Zetta.ConfigMgr.QuickTools.csproj
@@ -107,6 +107,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ResultClientHealthControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ResultClientHealthControl.Designer.cs">
+      <DependentUpon>ResultClientHealthControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ResultSoftwareUpdatesControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -168,6 +174,9 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ResultClientHealthControl.resx">
+      <DependentUpon>ResultClientHealthControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ResultCollectionsControl.resx">
       <DependentUpon>ResultCollectionsControl.cs</DependentUpon>
