--- a/Zetta.ConfigMgr.QuickTools.csproj
+++ b/Zetta.ConfigMgr.QuickTools.csproj
@@ -41,6 +41,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Microsoft Configuration Manager\AdminConsole\bin\AdminUI.Controls.dll</HintPath>
     </Reference>
+    <Reference Include="AdminUI.DialogFoundation, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\Microsoft Configuration Manager\AdminConsole\bin\AdminUI.DialogFoundation.dll</HintPath>
+    </Reference>
     <Reference Include="AdminUI.OsdCommon">
       <HintPath>C:\Program Files (x86)\Microsoft Configuration Manager\AdminConsole\bin\AdminUI.OsdCommon.dll</HintPath>
     </Reference>
@@ -82,6 +86,12 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddResourcesListDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddResourcesListDialog.Designer.cs">
+      <DependentUpon>AddResourcesListDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="CleanSoftwareUpdatesPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -169,6 +179,9 @@
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AddResourcesListDialog.resx">
+      <DependentUpon>AddResourcesListDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CleanSoftwareUpdatesPage.resx">
       <DependentUpon>CleanSoftwareUpdatesPage.cs</DependentUpon>
     </EmbeddedResource>
