--- a/Zetta.ConfigMgr.QuickTools.csproj
+++ b/Zetta.ConfigMgr.QuickTools.csproj
@@ -118,6 +118,12 @@
       <DependentUpon>DellWarrantyOptions.cs</DependentUpon>
     </Compile>
     <Compile Include="Driver.cs" />
+    <Compile Include="DriverGrabberDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DriverGrabberDialog.Designer.cs">
+      <DependentUpon>DriverGrabberDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="DriverPackage.cs" />
     <Compile Include="DriverPackageImportPage.cs">
       <SubType>UserControl</SubType>
