--- a/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
+++ b/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
@@ -119,6 +119,7 @@
     <Compile Include="DellDriverPackGeneralPage.Designer.cs">
       <DependentUpon>DellDriverPackGeneralPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Driver.cs" />
     <Compile Include="DriverGrabberGeneralPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -131,21 +132,45 @@
     <Compile Include="DriverGrabberSelectPage.Designer.cs">
       <DependentUpon>DriverGrabberSelectPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="DriverOptions.cs">
-      <SubType>Form</SubType>
+    <Compile Include="DriverPackage.cs" />
+    <Compile Include="DriverPackageGeneralPage.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="DriverOptions.Designer.cs">
-      <DependentUpon>DriverOptions.cs</DependentUpon>
+    <Compile Include="DriverPackageGeneralPage.Designer.cs">
+      <DependentUpon>DriverPackageGeneralPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DriverPackageImportPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DriverPackageImportPage.Designer.cs">
+      <DependentUpon>DriverPackageImportPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OptionsCatalogControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="OptionsCatalogControl.Designer.cs">
+      <DependentUpon>OptionsCatalogControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OptionsControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="OptionsControl.Designer.cs">
+      <DependentUpon>OptionsControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValidateInformationDialog.cs">
+    <Compile Include="ProgressInformationDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ValidateInformationDialog.Designer.cs">
-      <DependentUpon>ValidateInformationDialog.cs</DependentUpon>
+    <Compile Include="ProgressInformationDialog.Designer.cs">
+      <DependentUpon>ProgressInformationDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vendor.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ConfigMgr.QuickTools.Warranty\ConfigMgr.QuickTools.Warranty.csproj">
+      <Project>{4109FB03-1AC5-42D3-B46D-505B207B6091}</Project>
+      <Name>ConfigMgr.QuickTools.Warranty</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ConfigMgr.QuickTools\ConfigMgr.QuickTools.csproj">
       <Project>{86a66d04-06eb-41b0-a6bf-3a1aff79ca8d}</Project>
       <Name>ConfigMgr.QuickTools</Name>
@@ -164,11 +189,20 @@
     <EmbeddedResource Include="DriverGrabberSelectPage.resx">
       <DependentUpon>DriverGrabberSelectPage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DriverOptions.resx">
-      <DependentUpon>DriverOptions.cs</DependentUpon>
+    <EmbeddedResource Include="DriverPackageGeneralPage.resx">
+      <DependentUpon>DriverPackageGeneralPage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ValidateInformationDialog.resx">
-      <DependentUpon>ValidateInformationDialog.cs</DependentUpon>
+    <EmbeddedResource Include="DriverPackageImportPage.resx">
+      <DependentUpon>DriverPackageImportPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OptionsCatalogControl.resx">
+      <DependentUpon>OptionsCatalogControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OptionsControl.resx">
+      <DependentUpon>OptionsControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProgressInformationDialog.resx">
+      <DependentUpon>ProgressInformationDialog.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
