--- a/ConfigMgr.QuickTools.Warranty/ConfigMgr.QuickTools.Warranty.csproj
+++ b/ConfigMgr.QuickTools.Warranty/ConfigMgr.QuickTools.Warranty.csproj
@@ -66,11 +66,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DellWarrantyOptions.cs">
-      <SubType>Form</SubType>
+    <Compile Include="OptionsControl.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="DellWarrantyOptions.Designer.cs">
-      <DependentUpon>DellWarrantyOptions.cs</DependentUpon>
+    <Compile Include="OptionsControl.Designer.cs">
+      <DependentUpon>OptionsControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultDellWarrantyControl.cs">
@@ -81,8 +81,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="DellWarrantyOptions.resx">
-      <DependentUpon>DellWarrantyOptions.cs</DependentUpon>
+    <EmbeddedResource Include="OptionsControl.resx">
+      <DependentUpon>OptionsControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ResultDellWarrantyControl.resx">
       <DependentUpon>ResultDellWarrantyControl.cs</DependentUpon>
