--- a/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
+++ b/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Build\</OutputPath>
+    <OutputPath>..\Build\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -26,7 +26,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\Build\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -64,9 +64,9 @@
     <Reference Include="ByteSize, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ByteSize.1.3.0\lib\net45\ByteSize.dll</HintPath>
     </Reference>
-    <Reference Include="INIFileParser, Version=2.5.2.0, Culture=neutral, PublicKeyToken=79af7b307b65cf3c, processorArchitecture=MSIL">
+    <Reference Include="INIFileParser, Version=2.2.2.0, Culture=neutral, PublicKeyToken=79af7b307b65cf3c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Microsoft Configuration Manager\AdminConsole\bin\INIFileParser.dll</HintPath>
+      <HintPath>..\packages\INIFileParser.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ConfigurationManagement, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
@@ -168,10 +168,6 @@
     <Compile Include="Vendor.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ConfigMgr.QuickTools.Warranty\ConfigMgr.QuickTools.Warranty.csproj">
-      <Project>{4109FB03-1AC5-42D3-B46D-505B207B6091}</Project>
-      <Name>ConfigMgr.QuickTools.Warranty</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ConfigMgr.QuickTools\ConfigMgr.QuickTools.csproj">
       <Project>{86a66d04-06eb-41b0-a6bf-3a1aff79ca8d}</Project>
       <Name>ConfigMgr.QuickTools</Name>
