--- a/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
+++ b/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
@@ -64,10 +64,6 @@
     <Reference Include="ByteSize, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ByteSize.1.3.0\lib\net45\ByteSize.dll</HintPath>
     </Reference>
-    <Reference Include="INIFileParser, Version=2.2.2.0, Culture=neutral, PublicKeyToken=79af7b307b65cf3c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\INIFileParser.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.ConfigurationManagement, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Microsoft Configuration Manager\AdminConsole\bin\Microsoft.ConfigurationManagement.exe</HintPath>
@@ -171,6 +167,10 @@
     <ProjectReference Include="..\ConfigMgr.QuickTools\ConfigMgr.QuickTools.csproj">
       <Project>{86a66d04-06eb-41b0-a6bf-3a1aff79ca8d}</Project>
       <Name>ConfigMgr.QuickTools</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IniFileParser\INIFileParser.csproj">
+      <Project>{5e46dcf4-c473-4171-9f9b-f3910b5ec407}</Project>
+      <Name>INIFileParser</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
