update dell driver download
improve download handling to only download change files

--- a/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
+++ b/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
@@ -108,6 +108,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DellDriverPackage.cs" />
     <Compile Include="DellDriverPackCatalogPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
