--- a/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
+++ b/ConfigMgr.QuickTools.DriverManager/ConfigMgr.QuickTools.DriverManager.csproj
@@ -92,6 +92,9 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="SmartThreadPool, Version=2.2.4.0, Culture=neutral, PublicKeyToken=1126fe8b671e8a79, processorArchitecture=MSIL">
+      <HintPath>..\packages\SmartThreadPool.dll.2.2.4\lib\net45\SmartThreadPool.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
