--- a/ConfigMgr.QuickTools.DriverManager/packages.config
+++ b/ConfigMgr.QuickTools.DriverManager/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="ByteSize" version="1.3.0" targetFramework="net45" />
   <package id="MSFTCompressionCab" version="1.0.0" targetFramework="net45" />
+  <package id="SmartThreadPool.dll" version="2.2.4" targetFramework="net45" />
 </packages>
