--- a/ConfigMgr.QuickTools/ConfigMgr.QuickTools.csproj
+++ b/ConfigMgr.QuickTools/ConfigMgr.QuickTools.csproj
@@ -128,6 +128,7 @@
     <Compile Include="RemoveRetiredContentPage.Designer.cs">
       <DependentUpon>RemoveRetiredContentPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="TaskSequenceImportExport.cs" />
     <Compile Include="Updater.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
